--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>SWOP</groupId>
     <artifactId>GameWorldAPI</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>latest</version>
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
