--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
             </plugin>
         </plugins>
     </build>
-
+    <dependencies>
+        <dependency>
+            <groupId>SWOP</groupId>
+            <artifactId>ImageLibrary</artifactId>
+            <version>latest</version>
+            <systemPath>${project.basedir}/lib/ImageLibrary-latest.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
+    </dependencies>
 
 </project>
